# enhanced-video-downloader-2024

./: .coverage  .coverage.lappy5000.local.46837.XZPtmtVx  .editorconfig  .env  .envrc  .flake8  .gitignore  .markdownlint.json  .mutation.logpath  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.json  ARCHITECTURE.md  CHANGELOG.md  Caddyfile  DEVELOPER.md  Makefile  README.md  TESTING_STRATEGY.md  TODO.md  UNIFIED_FRAMEWORK_COMPLETE.md  babel.config.js  eslint.config.cjs  jest.config.js  jest.stryker.config.js  manifest.json  package-lock.json  package.json  playwright.config.js  purgecss.config.cjs  pyproject.toml  pyright-current-errors.json  pyright-report.txt  pyrightconfig.json  rules.json  setup.cfg  stryker.conf.js  stryker.fast.conf.js  stryker.minimal.conf.js  (+2 more)
.hypothesis/constants/: 014bb385fb39e0bf  0471217325f666a0  0579d649e5ef267e  08c02d9b209b3d65  10f200b7c782cae2  1454f5d95faf0366  24a4a930fc7d2a76  2d41329e360cc0fe  2f0cea00a15cd7fb  3327394a80bd55b3  3aad66baa74d9bb6  45c40802f362cc8d  4bc96e1c0403319a  4d847432f9f30988  4da32f946e045762  4efb0bb4782e956e  4f3f19b803a954ac  4f9691fd01c08887  51ee86276dae9b09  53d8690d23954983  56f7562aa07b5a23  633a7f4a75a3a3b2  6ae7f14ded5c0067  6b05d3cda3792e93  6d1136e32d7406c3  7187a995afe01ebe  72657d443005200f  8253ece3c87f58e7  87236b2c4e3b872c  874170b20d03193e  88b83d451399231b  8ca793211976059f  916479c630aa1546  9468293a819f3ab0  965167441d38e597  a73aabd529e1b3e1  a7ef0d73bb8cbec0  ac7abcb5e961cbea  b3e54f5441688425  c335ae08efc8e082  (+13 more)
_metadata/generated_indexed_rulesets/: _ruleset1
ci/: Dockerfile
config/: .env  config.json  emoji_whitelist.json  ignore-patterns.json  pytest.ini
docs/: mutation_testing.md  mutmut_optimization.md  mutmut_speed_optimizations.md
extension/: test-video.html  tsconfig.json
extension/src/: background-downloads.ts  background-helpers.ts  background-logic.ts  background-queue.ts  background-server.ts  background.ts  constants-optimized.ts  constants.ts  content-lazy.ts  content.ts  extension-overview.md  global.d.ts  history.ts  options-dynamic.ts  options.ts  popup.ts  stryker-test.ts  youtube_enhance.ts
extension/ui/: base.css  components.css  content.css  options-logs.css  options.css  options.html  popup.css  popup.html  styles.css  themes.css  variables.css
playwright-report/: index.html
reports/: bundle_analysis_report.json  css_audit_report.md  css_audit_summary.md  css_comprehensive_report.md  frontend_optimization_comprehensive_audit.md  frontend_optimization_progress_audit.md  hardcoded_variables_audit_report.md  hardcoded_variables_summary.md  legacy_modules_audit.md  mutation_analysis_report.md  performance_report.json  playwright_quality_audit_report.md  test_audit_report.md  test_audit_summary.md  test_docstring_audit_report.md  type_ignore_audit_report.md  unused_code_report.md
reports/mutation/: mutation.html  mutation_report.json
scripts/: analyze_bundle_size.js  analyze_playwright_coverage.py  audit_ignores.py  audit_test_redundancy.py  automated_mutation_testing.py  build-ts.sh  check_compliance.py  check_emojis.py  cleanup_null_urls.py  copy-html.js  embed_css_variables.py  export-chrome-cookies.js  export_cookies.py  fast_mutmut.py  full_report.md  generate-ignore-files.py  generate_inventory_report.py  generate_unused_code_report.sh  minify-css.js  minimal_mutmut.py  monitor_bundle_size.js  optimize_mutmut.py  optimize_tree_shaking.js  prevent_junk_folders.py  profile_performance.js  remove_all_emojis.py  run_checks.sh  run_matrix_seq.js  setup_dev.py  setup_uv.py  simplify_frontend.js  test_mutation_simple.py  update_ad_origins.py  update_coverage_stats.py  verify-build.js
scripts/tests/: conftest.py
server/: __init__.py  __main__.py  cli_helpers.py  cli_main.py  cli_resume_helpers.py  config.py  constants.py  disable_launchagents.py  extraction_rules.py  history.py  lock.py  logging_setup.py  pipeline_coordinator.py  queue.py  schemas.py  utils.py  video_downloader_server.py
server/api/: __init__.py  api.md  config_bp.py  debug_bp.py  download_bp.py  health_bp.py  history_bp.py  logs_bp.py  logs_manage_bp.py  queue_bp.py  restart_bp.py  status_bp.py
server/cli/: __init__.py  download.py  history.py  queue.py  queue_commands.py  resume.py  serve.py  status.py  system.py  utils.py
server/cli_commands/: __init__.py  lifecycle.py  resume.py  status.py  system_maintenance.py
server/config/: extraction_rules.json
server/data/: history.json  server.json
server/downloads/: __init__.py  gallery_dl.py  resume.py  ytdlp.py
tests/: conftest.py  testing.md
tests/extension/: ad-origins.json  background-helpers.test.ts  background-logic.test.ts  background-simple.test.ts  background.queue.remove.test.ts  background.test.ts  background.util.test.js  background.util.test.ts  content-logic.test.ts  content.behavior.test.ts  content.extra.test.ts  content.state.test.js  content.state.test.ts  content.test.ts  content.ui.test.ts  content.util.test.ts  dom-manager.test.ts  event-manager.test.ts  extension-integration-tests.md  history.render.test.js  history.render.test.ts  history.script.test.ts  history.util.test.ts  hypnotube-cookies.json  media-domains.json  media-sites.json  options.errorHistory.test.ts  options.queue.test.ts  options.ui.test.ts  options.unit.test.ts  performance-utils.test.ts  playwright-e2e.spec.js  popup-settings.test.ts  popup.advanced.test.js  popup.advanced.test.ts  popup.queue.test.ts  popup.test.ts  popup.util.test.ts  test_extension_ui.py  test_extension_ui_e2e.js  (+4 more)
tests/integration/: __init__.py  background.logs.integration.test.ts  test_api_error_handling.py  test_api_integration.py  test_cancel_endpoint.py  test_clear_status_concurrency.py  test_concurrent_operations.py  test_config_endpoint.py  test_debug_paths.py  test_download_bp.py  test_download_bp_additional.py  test_download_bp_minimal.py  test_health_endpoint.py  test_history_consolidation.py  test_history_endpoint.py  test_logs_endpoint.py  test_pause_resume_endpoints.py  test_priority_endpoint.py  test_queue_bp.py  test_restart_bp.py  (+5 more)
(+223 files in other folders)
